# project_stock

./: .env.example  .gitignore  README.md  pyproject.toml
configs/: app.example.yaml  backtest.example.yaml  ecos.series.example.yaml  krx.symbols.example.yaml  market_event_thresholds.yaml  opendart.corp_codes.example.yaml  portfolio.example.yaml  real_data_smoke.kor_semi.example.yaml  universe.kor_semi.yaml
docs/: MVP_MILESTONE_v0.1.0.md  architecture.md  backtesting_validation.md  codex_implementation_plan.md  dashboard.md  data_contracts.md  data_sources.md  event_taxonomy.md  evidence_generation.md  kor_semi_thesis_pack.md  krx_adapter.md  opendart_adapter.md  opendart_financials.md  operations.md  portfolio_review.md  real_data_activation.md  real_data_smoke_pipeline.md  real_run_operator_runbook.md  thesis_lifecycle.md
playbooks/: earnings_shock_v1.0.yaml  geopolitical_energy_shock_v1.0.yaml  kor_semi_ai_capex_slowdown_v2.0.yaml  kor_semi_market_breakdown_v2.0.yaml  kor_semi_rate_fx_stress_v2.0.yaml  kor_semi_revision_deterioration_v2.0.yaml  macro_rate_shock_v1.0.yaml
tests/: conftest.py  test_backtest_validation.py  test_dashboard.py  test_event_normalization.py  test_event_pipeline.py  test_evidence_generation.py  test_kor_semi_thesis_pack.py  test_krx_real_adapter.py  test_models.py  test_official_collectors.py  test_opendart_financials.py  test_operations_review_loop.py  test_portfolio_review.py  test_real_data_smoke.py  test_real_run_acceptance_report.py  test_real_run_preflight.py  test_scenario_matcher.py  test_scoring.py  test_sentinel.py  (+2 more)
(+123 files in other folders)
